Make canvas resizeable

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-    <canvas id="point-cloud-canvas"></canvas>
+    <canvas style="width: 75%; height: 75%;" id="point-cloud-canvas"></canvas>
 </div>
 </body>
 </html>
