Allow setting canvas_id and base url in app

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             });
 
             console.log("WASM loaded");
-            await run();
+            await run("point-cloud-canvas");
         }
 
         main();
